--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "hcodebr/ecommerce",
+    "name": "masterdba6/ecommerce",
     "authors": [
         {
-            "name": "Hcode Treinamentos",
-            "email": "suporte@hcode.com.br"
+            "name": "Robson Gomes Pedreira",
+            "email": "masterdba6@gmail.com"
         }
     ],
     "require": {
